Move init commands out of Dockerfile and put it inside docker-compose.yml and increase timeout for datahub-gms to 240s

--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -143,6 +143,9 @@ services:
       - broker
       - mysql
       - schema-registry
+    command: "bash -c 'dockerize -wait tcp://mysql:3306 -wait tcp://broker:29092 -wait http://elasticsearch:9200 \
+                                   -timeout 240s \
+                                   java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
   datahub-frontend:
     image: keremsahin/datahub-frontend:latest
