--- a/docker/gms/docker-compose.yml
+++ b/docker/gms/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
+    command: "bash -c 'java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
 networks:
   default:
