corp-identity-gms 1.0.26 -> 1.0.40:     1.0.34: Downrank inactive users in user search query     1.0.33: Refactor clients to remove snapshot builder     1.0.32: Adding client & integration test for get_all     1.0.30: Implement other clients for corp groups     1.0.28: Add resources for search and autocomplete for corp groups     1.0.27: Start using BaseClient from metadata-models     1.0.26: Add get_all resource for CorpUsers
metadata-models 38.1.12 -> 50.0.6:
    50.0.2: Fix removed field update logic for all entities
    49.0.1: Add dataset graph builder with DownstreamOf relationship
    48.0.3: support query dao with traverse paths
    47.0.2: refactor the query dao with relationship filter model
    47.0.1: Fix for creating duplicate nodes when label for the node is missing
   46.0.21: extend filter model with relationship direction
   46.0.19: add unit test for entities partial update
   46.0.16: Allow relationship filter in the model and query dao
   46.0.15: support relationship directions for multi hop query
   46.0.14: Implementing reportsto relationship builder and corpuser graph builder
   46.0.10: refactor query dao interface using nullable to replace optional
    46.0.9: Rename Mock Utils to Test Utils in Metadata-models mp
    46.0.6: Remove search index config from metadata models
    46.0.2: neo4j query DAO with relationships directions support
    45.1.7: refactoring the graph relationship builders
    45.1.5: Use correct total count in search response
    45.1.3: Fix issue with empty search query filter
    45.1.2: Fix a bug with autocomplete limit param
    45.0.3: Change platform field type in the dataset search document
    45.0.2: implement multi hops query DAO with interface 5
    45.0.1: Moving dataset browsePaths build logic from wherehows-samza
    44.0.2: implement interface 2 in query DAO
    40.0.2: Only return records which exist in the DB after getting search hits
    39.0.0: Add a getAuditor method to BaseSnapshotResource rather tha

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ project.ext.externalDependency = [
     'httpClient': 'org.apache.httpcomponents:httpclient:4.5.9',
     'jacksonCore': 'com.fasterxml.jackson.core:jackson-core:2.9.7',
     'jacksonDataBind': 'com.fasterxml.jackson.core:jackson-databind:2.9.7',
+    "javatuples": "org.javatuples:javatuples:1.2",
     'jerseyCore': 'org.glassfish.jersey.core:jersey-client:2.25.1',
     'jerseyGuava': 'org.glassfish.jersey.bundles.repackaged:jersey-guava:2.25.1',
     'jsonSimple': 'com.googlecode.json-simple:json-simple:1.1.1',
@@ -76,13 +77,6 @@ allprojects {
 subprojects {
   apply plugin: 'maven'
 
-  afterEvaluate {
-    if (project.plugins.hasPlugin('java')) {
-      sourceCompatibility = 1.8
-      targetCompatibility = 1.8
-    }
-  }
-  
   afterEvaluate {
     if (project.plugins.hasPlugin('pegasus')) {
       dependencies {
