--- a/metadata-dao/build.gradle
+++ b/metadata-dao/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'pegasus'
 dependencies {
   compile project(':li-utils')
   compile project(':metadata-validators')
+  compile externalDependency.javatuples
 
   dataModel project(':li-utils')
 
