--- a/metadata-restli-resource/build.gradle
+++ b/metadata-restli-resource/build.gradle
@@ -7,6 +7,7 @@ dependencies {
   compile project(':li-utils')
   compile project(':metadata-dao')
   compile spec.product.pegasus.restliServer
+  compile spec.product.pegasus.restliClient
 
   compileOnly externalDependency.lombok
 
