--- a/docker/mae-consumer/Dockerfile
+++ b/docker/mae-consumer/Dockerfile
@@ -3,6 +3,6 @@ FROM openjdk:8
 MAINTAINER Kerem Sahin ksahin@linkedin.com
 
 COPY . datahub-src
-RUN cd datahub-src && ./gradlew :metadata-jobs:elasticsearch-index-job:build \
-    && cp metadata-jobs/elasticsearch-index-job/build/distributions/elasticsearch-index-job.zip ../elasticsearch-index-job.zip \
-    && cd .. && rm -rf datahub-src && unzip elasticsearch-index-job.zip
+RUN cd datahub-src && ./gradlew :metadata-jobs:mae-consumer-job:build \
+    && cp metadata-jobs/mae-consumer-job/build/distributions/mae-consumer-job.zip ../mae-consumer-job.zip \
+    && cd .. && rm -rf datahub-src && unzip mae-consumer-job.zip
