--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ include 'metadata-events:mxe-avro-1.7'
 include 'metadata-events:mxe-registration'
 include 'metadata-events:mxe-schemas'
 include 'metadata-events:mxe-utils-avro-1.7'
-include 'metadata-jobs:elasticsearch-index-job'
+include 'metadata-jobs:mae-consumer-job'
 include 'metadata-jobs:mce-consumer-job'
 include 'metadata-models'
 include 'metadata-restli-resource'
