--- a/metadata-utils/build.gradle
+++ b/metadata-utils/build.gradle
@@ -6,6 +6,7 @@ dependencies {
   compile externalDependency.elasticSearchRest
   compile externalDependency.httpClient
   compile externalDependency.logbackClassic
+  compile externalDependency.neo4jJavaDriver
   compile spec.product.pegasus.restliClient
   compile spec.product.pegasus.restliCommon
 
