--- a/docker/gms/docker-compose.yml
+++ b/docker/gms/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
+      - NEO4J_URI=bolt://neo4j
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASSWORD=datahub
     command: "bash -c 'java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
 networks:
