--- a/gms/impl/build.gradle
+++ b/gms/impl/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   compile project(path: ':metadata-dao', configuration: 'dataTemplate')
   compile project(':metadata-dao-impl:ebean-dao')
   compile project(':metadata-dao-impl:elasticsearch-dao')
+  compile project(':metadata-dao-impl:neo4j-dao')
   compile project(':metadata-testing:metadata-test-utils')
   compile spec.product.pegasus.restliServer
   compile project(':metadata-restli-resource')
