Set linkedin.internal flag to false to disable 2FA banner

--- a/datahub-frontend/conf/application.conf
+++ b/datahub-frontend/conf/application.conf
@@ -46,7 +46,7 @@ play.modules.enabled += "play.api.mvc.LegacyCookiesModule"
 app.version = ${DATAHUB_APP_VERSION}
 
 dataset.hdfs_browser.link = ""
-linkedin.internal = true
+linkedin.internal = false
 
 linkedin.show.dataset.lineage = true
 
