metadata-models 50.0.6 -> 54.0.1:     54.0.0: Filter removed documents during browse    53.0.15: Throwing 404, when no aspects found in DB for a given entity    53.0.14: add node label when updating relationship     53.0.8: Handle * character in the directory path for browse     53.0.4: apply label for add/update graph node&edge     53.0.0: META-10395: Don't package KafkaAuditHeader and UUID classes in mxe-avro     52.0.7: Add API in search DAO to support query filters     52.0.5: META-10073: Refactor remote DAO to use the new Ingest action method    51.0.16: allow query dao use default order by from neo4j    51.0.15: enable dataset indexing in graph    51.0.12: Move EMPTY_FILTER to RestliConstants    51.0.11: Add KafkaEventProducerFactory to utils    51.0.10: Create in-memory Neo4j in Neo4jDriverFactory if integration config is set     51.0.9: Generalized add() in BaseLocalDAO and EbeanLocalDAO     51.0.4: Move Neo4jTestServerBuilder to metadata test utils     51.0.3: Move makeRelationshipFilter to neo4j utils     50.0.7: Implement Neo4jDriverFactory
MP_VERSION=metadata-models:54.0.1
MP_VERSION=wherehows-samza:1.0.56

--- a/metadata-testing/metadata-test-utils/build.gradle
+++ b/metadata-testing/metadata-test-utils/build.gradle
@@ -9,4 +9,5 @@ dependencies {
   compile externalDependency.jacksonCore
   compile externalDependency.jacksonDataBind
   compile externalDependency.lombok
+  compile externalDependency.neo4jHarness
 }
