--- a/metadata-dao-impl/restli-dao/build.gradle
+++ b/metadata-dao-impl/restli-dao/build.gradle
@@ -4,12 +4,14 @@ apply plugin: 'pegasus'
 dependencies {
   compile project(':metadata-dao')
   compile project(':metadata-models')
+  compile project(':metadata-restli-resource')
   compile externalDependency.cacheApi
   compile spec.product.pegasus.restliClient
   compile spec.product.pegasus.restliCommon
 
   compileOnly externalDependency.lombok
 
+  testCompile project(':metadata-testing:metadata-test-models')
   testCompile project(':metadata-testing:metadata-test-utils')
   testCompile externalDependency.mockito
   testCompile externalDependency.testng
