--- a/docker/ingestion/Dockerfile
+++ b/docker/ingestion/Dockerfile
@@ -1,11 +1,6 @@
 FROM openjdk:8
+COPY --from=python:2.7 / /
 COPY . datahub-src
-RUN cd datahub-src && ./gradlew :metadata-events:mxe-schemas:build
-
-FROM python:2.7-slim
-WORKDIR /ingestion
-
-COPY metadata-ingestion/mce-cli /ingestion
-RUN pip install -r requirements.txt
-COPY metadata-events/mxe-schemas/src/renamed/avro/com/linkedin/mxe/MetadataChangeEvent.avsc /ingestion
-RUN rm -rf datahub-src
+RUN cd datahub-src && ./gradlew :metadata-events:mxe-schemas:build \
+    && cp -r metadata-ingestion/mce-cli . && cd metadata-ingestion/mce-cli \
+    && pip install --user -r requirements.txt
