--- a/datahub-web/@datahub/user/package.json
+++ b/datahub-web/@datahub/user/package.json
@@ -29,28 +29,28 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@nacho-ui/avatars": "^0.0.21",
-    "@nacho-ui/core": "^0.0.21",
-    "@nacho-ui/dropdown": "^0.0.21",
-    "@nacho-ui/pill": "^0.0.21",
-    "@nacho-ui/table": "^0.0.21",
-    "dynamic-link": "^0.2.3",
+    "@nacho-ui/avatars": "^0.0.34",
+    "@nacho-ui/core": "^0.0.34",
+    "@nacho-ui/dropdown": "^0.0.34",
+    "@nacho-ui/pill": "^0.0.34",
+    "@nacho-ui/table": "^0.0.37",
     "ember-cli-babel": "^7.8.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-typescript": "^2.0.2",
     "ember-composable-helpers": "^2.1.0",
-    "ember-concurrency": "^1.0.0",
+    "ember-concurrency": "^1.1.2",
     "ember-modal-dialog": "^3.0.0-beta.0",
-    "ember-moment": "^7.8.1",
-    "ember-simple-auth": "^1.8.2",
+    "ember-moment": "^8.0.0",
+    "ember-simple-auth": "^1.9.2",
     "ember-truth-helpers": "^2.1.0",
     "ivy-tabs": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@ember/optional-features": "^0.7.0",
+    "@nacho-ui/animations": "^0.0.34",
     "@types/ember": "^3.1.0",
     "@types/ember-qunit": "^3.4.6",
     "@types/ember-test-helpers": "^1.0.5",
@@ -76,7 +76,7 @@
     "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.0.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.4",
+    "qunit-dom": "^0.9.1",
     "sass": "^1.21.0",
     "typescript": "^3.5.3"
   },
