--- a/datahub-web/@datahub/lists/package.json
+++ b/datahub-web/@datahub/lists/package.json
@@ -29,8 +29,8 @@
     "@fortawesome/ember-fontawesome": "^0.1.13",
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@nacho-ui/animations": "^0.0.21",
-    "@nacho-ui/core": "^0.0.21",
+    "@nacho-ui/animations": "^0.0.37",
+    "@nacho-ui/core": "0.0.34",
     "ember-cli-babel": "^7.8.0",
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-typescript": "^2.0.2",
@@ -59,7 +59,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-typescript-blueprints": "^2.0.0",
     "ember-cli-uglify": "^2.1.0",
-    "ember-concurrency": "^1.0.0",
+    "ember-concurrency": "^1.1.5",
     "ember-decorators": "^6.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
