--- a/datahub-web/packages/data-portal/package.json
+++ b/datahub-web/packages/data-portal/package.json
@@ -60,7 +60,7 @@
     "ember-cli-typescript-blueprints": "^2.0.0",
     "ember-cli-uglify": "^2.1.0",
     "ember-composable-helpers": "^2.1.0",
-    "ember-concurrency": "^1.0.0",
+    "ember-concurrency": "^1.1.5",
     "ember-decorators": "^6.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
@@ -88,14 +88,14 @@
     "@datahub/lists": "0.0.0",
     "@datahub/metadata-types": "0.0.0",
     "@datahub/shared": "0.0.0",
-    "@datahub/user": "0.0.0",
     "@datahub/tracking": "0.0.0",
+    "@datahub/user": "0.0.0",
     "@datahub/utils": "0.0.0",
     "@fortawesome/ember-fontawesome": "^0.1.13",
-    "@nacho-ui/avatars": "^0.0.21",
-    "@nacho-ui/core": "^0.0.21",
-    "@nacho-ui/table": "^0.0.21",
-    "@nacho-ui/dropdown": "^0.0.21",
+    "@nacho-ui/avatars": "^0.0.37",
+    "@nacho-ui/core": "0.0.34",
+    "@nacho-ui/dropdown": "^0.0.37",
+    "@nacho-ui/table": "^0.0.37",
     "@types/vis": "^4.21.11",
     "bootstrap": "3.3.7",
     "bootstrap-sass": "^3.3.7",
@@ -111,7 +111,7 @@
     "ember-medium-editor-fix": "^0.0.3",
     "ember-metrics": "^0.13.0",
     "ember-modal-dialog": "^3.0.0-beta.0",
-    "ember-moment": "^7.8.1",
+    "ember-moment": "^8.0.0",
     "ember-power-calendar": "^0.14.0",
     "ember-power-select": "^2.0.9",
     "ember-power-select-typeahead": "^0.7.2",
