--- a/datahub-web/@datahub/datasets-core/package.json
+++ b/datahub-web/@datahub/datasets-core/package.json
@@ -27,22 +27,22 @@
     "@fortawesome/ember-fontawesome": "^0.1.13",
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@nacho-ui/animations": "^0.0.21",
-    "@nacho-ui/core": "^0.0.21",
-    "@nacho-ui/pill": "^0.0.21",
-    "@nacho-ui/table": "^0.0.21",
+    "@nacho-ui/animations": "^0.0.37",
+    "@nacho-ui/core": "0.0.34",
+    "@nacho-ui/pill": "^0.0.37",
+    "@nacho-ui/table": "^0.0.37",
     "ember-ace": "^2.0.1",
     "ember-basic-dropdown": "^1.1.3",
     "ember-cli-babel": "^7.8.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-typescript": "^2.0.2",
     "ember-composable-helpers": "^2.1.0",
-    "ember-concurrency": "^1.0.0"
+    "ember-concurrency": "^1.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@ember/optional-features": "^0.7.0",
-    "@nacho-ui/dropdown": "^0.0.21",
+    "@nacho-ui/dropdown": "^0.0.37",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ace": "^2.0.1",
     "ember-ajax": "^4.0.2",
