--- a/datahub-web/@datahub/entity-deprecation/package.json
+++ b/datahub-web/@datahub/entity-deprecation/package.json
@@ -20,7 +20,7 @@
     "postpublish": "ember ts:clean"
   },
   "dependencies": {
-    "@nacho-ui/core": "^0.0.21",
+    "@nacho-ui/core": "0.0.34",
     "ember-basic-dropdown": "^1.1.3",
     "ember-cli-babel": "^7.8.0",
     "ember-cli-htmlbars": "^2.0.1",
@@ -28,7 +28,7 @@
     "ember-cli-string-helpers": "^2.0.0",
     "ember-cli-typescript": "^2.0.2",
     "ember-medium-editor-fix": "^0.0.3",
-    "ember-moment": "^7.8.1",
+    "ember-moment": "^8.0.0",
     "ember-power-calendar": "^0.14.0",
     "ember-power-calendar-moment": "^0.1.7",
     "ember-truth-helpers": "^2.1.0",
