--- a/datahub-web/@datahub/institutional-memory/package.json
+++ b/datahub-web/@datahub/institutional-memory/package.json
@@ -24,17 +24,17 @@
     "@datahub/data-models": "0.0.0",
     "@datahub/utils": "0.0.0",
     "@fortawesome/ember-fontawesome": "^0.1.13",
-    "@nacho-ui/animations": "^0.0.21",
-    "@nacho-ui/core": "^0.0.21",
-    "@nacho-ui/table": "^0.0.21",
+    "@nacho-ui/animations": "^0.0.37",
+    "@nacho-ui/core": "0.0.34",
+    "@nacho-ui/table": "^0.0.37",
     "ember-cli-babel": "^7.8.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-typescript": "^2.0.2",
-    "ember-concurrency": "^1.0.0",
+    "ember-concurrency": "^1.1.5",
     "ember-inflector": "^3.0.0",
     "ember-modal-dialog": "^3.0.0-beta.0",
-    "ember-moment": "^7.8.1"
+    "ember-moment": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
