Enable people search

--- a/datahub-frontend/conf/application.conf
+++ b/datahub-frontend/conf/application.conf
@@ -80,7 +80,7 @@ links.wiki.datasetDecommission = ""
 ui.show.ownership.revamp = true
 
 ui.show.staging.banner = false
-ui.show.people = false
+ui.show.people = true
 
 ui.show.CM.banner = false
 ui.show.CM.link = ""
