--- a/datahub-frontend/conf/application.conf
+++ b/datahub-frontend/conf/application.conf
@@ -62,7 +62,7 @@ linkedin.links.avi.urlPrimary = ""
 
 linkedin.links.avi.urlFallback = ""
 
-links.wiki.appHelp = "https://github.com/linkedin/WhereHows/tree/datahub"
+links.wiki.appHelp = "https://github.com/linkedin/datahub"
 links.wiki.gdprPii = ""
 links.wiki.tmsSchema = ""
 links.wiki.gdprTaxonomy = ""
