Add forward slash escape for Elasticsearch queries

--- a/docker/elasticsearch/corpuser-index-config.json
+++ b/docker/elasticsearch/corpuser-index-config.json
@@ -16,10 +16,20 @@
             "catenate_words": "false"
           }
         },
+        "normalizer": {
+          "custom_normalizer": {
+            "filter": [
+              "lowercase",
+              "asciifolding"
+            ],
+            "type": "custom"
+          }
+        },
         "analyzer": {
           "delimit_edgengram": {
             "filter": [
               "lowercase",
+              "custom_delimiter",
               "autocomplete_filter"
             ],
             "tokenizer": "whitespace"
@@ -27,8 +37,7 @@
           "delimit": {
             "filter": [
               "lowercase",
-              "custom_delimiter",
-              "autocomplete_filter"
+              "custom_delimiter"
             ],
             "tokenizer": "whitespace"
           },
@@ -48,13 +57,7 @@
     "doc": {
       "properties": {
         "aboutMe": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword",
-              "ignore_above": 256
-            }
-          }
+          "type": "text"
         },
         "active": {
           "type": "boolean"
@@ -66,8 +69,7 @@
               "type": "text",
               "analyzer": "delimit_edgengram"
             }
-          },
-          "analyzer": "delimit"
+          }
         },
         "ldap": {
           "type": "text",
@@ -90,38 +92,18 @@
           "analyzer": "lowercase_keyword"
         },
         "skills": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword",
-              "ignore_above": 256
-            }
-          }
+          "type": "text"
         },
         "teams": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword",
-              "ignore_above": 256
-            }
-          }
+          "type": "text"
         },
         "title": {
-          "type": "text",
-          "fields": {
-            "ngram": {
-              "type": "text",
-              "analyzer": "delimit_edgengram"
-            }
-          },
-          "analyzer": "delimit",
-          "fielddata": true
+          "type": "keyword",
+          "normalizer": "custom_normalizer"
         },
         "urn": {
-          "type": "text",
-          "analyzer": "lowercase_keyword",
-          "fielddata": true
+          "type": "keyword",
+          "normalizer": "custom_normalizer"
         }
       }
     }
