Fix lowercase_keyword analyzer settings for people entity

--- a/docker/elasticsearch/corpuser-index-config.json
+++ b/docker/elasticsearch/corpuser-index-config.json
@@ -43,8 +43,7 @@
           },
           "lowercase_keyword": {
             "filter": [
-              "lowercase",
-              "autocomplete_filter"
+              "lowercase"
             ],
             "type": "custom",
             "tokenizer": "keyword"
