--- a/metadata-dao/build.gradle
+++ b/metadata-dao/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
   compileOnly externalDependency.lombok
 
+  annotationProcessor externalDependency.lombok
+
   testCompile project(':metadata-testing:metadata-test-models')
   testCompile project(':metadata-testing:metadata-test-utils')
   testCompile externalDependency.guava
