--- a/metadata-validators/build.gradle
+++ b/metadata-validators/build.gradle
@@ -7,5 +7,7 @@ dependencies {
 
   compileOnly externalDependency.lombok
 
+  annotationProcessor externalDependency.lombok
+
   testCompile externalDependency.guava
 }
