--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ buildscript {
   apply from: './repositories.gradle'
   buildscript.repositories.addAll(project.repositories)
   dependencies {
-    classpath 'com.linkedin.pegasus:gradle-plugins:23.0.19'
+    classpath 'com.linkedin.pegasus:gradle-plugins:27.7.18'
     classpath 'com.moowork.gradle:gradle-node-plugin:1.3.1'
+    classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.8.1"
   }
 }
 
-final pegasusVersion = '23.0.19'
+final pegasusVersion = '27.7.18'
 project.ext.spec = [
     'product' : [
         'pegasus' : [
@@ -24,7 +25,6 @@ project.ext.spec = [
 
 project.ext.externalDependency = [
     'avro_1_7': 'org.apache.avro:avro:1.7.7',
-    'avroMigrationHelper': 'com.linkedin.avroutil:avro-migration-helper:0.1.0',
     'cacheApi' : 'javax.cache:cache-api:1.1.0',
     'commonsIo': 'commons-io:commons-io:2.4',
     'commonsLang': 'commons-lang:commons-lang:2.6',
@@ -50,7 +50,7 @@ project.ext.externalDependency = [
     'kafkaSerializers': 'io.confluent:kafka-avro-serializer:3.3.1',
     'kafkaStreams': 'org.apache.kafka:kafka-streams:2.3.0',
     'logbackClassic': 'ch.qos.logback:logback-classic:1.2.3',
-    'lombok': 'org.projectlombok:lombok:1.18.8',
+    'lombok': 'org.projectlombok:lombok:1.18.12',
     'mockito': 'org.mockito:mockito-core:3.0.0',
     'mysqlConnector': 'mysql:mysql-connector-java:5.1.47',
     "neo4jHarness": "org.neo4j.test:neo4j-harness:3.4.11",
