--- a/metadata-builders/build.gradle
+++ b/metadata-builders/build.gradle
@@ -7,6 +7,8 @@ dependencies {
   compileOnly externalDependency.lombok
   compileOnly externalDependency.findbugsAnnotations
 
+  annotationProcessor externalDependency.lombok
+
   testCompile externalDependency.testng
   testCompile externalDependency.mockito
   testCompile project(':metadata-testing:metadata-test-utils')
