--- a/metadata-dao-impl/kafka-producer/build.gradle
+++ b/metadata-dao-impl/kafka-producer/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
   compileOnly externalDependency.lombok
 
+  annotationProcessor externalDependency.lombok
+
   testCompile externalDependency.mockito
   testCompile externalDependency.testng
 }
