--- a/metadata-jobs/mae-consumer-job/build.gradle
+++ b/metadata-jobs/mae-consumer-job/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
     compileOnly externalDependency.lombok
 
+    annotationProcessor externalDependency.lombok
+
     runtime externalDependency.logbackClassic
 }
 
