--- a/metadata-jobs/mce-consumer-job/build.gradle
+++ b/metadata-jobs/mce-consumer-job/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     compileOnly externalDependency.lombok
 
+    annotationProcessor externalDependency.lombok
+
     runtime externalDependency.logbackClassic
 }
 
