--- a/metadata-utils/build.gradle
+++ b/metadata-utils/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
   compileOnly externalDependency.lombok
 
+  annotationProcessor externalDependency.lombok
+
   testCompile project(':metadata-testing:metadata-test-utils')
   testCompile externalDependency.testng
 }
