Enable tests for all modules by using global gradle config

--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,16 @@ allprojects {
 subprojects {
   apply plugin: 'maven'
 
+  plugins.withType(JavaPlugin) {
+    dependencies {
+      testCompile externalDependency.testng
+    }
+
+    tasks.withType(Test) {
+      useTestNG()
+    }
+  }
+
   afterEvaluate {
     if (project.plugins.hasPlugin('java')) {
       sourceCompatibility = 1.8
