fix typo and watchman error (#1574)
* adjust gradew to gradlew

* add watchman proxy URL

--- a/datahub-web/build.gradle
+++ b/datahub-web/build.gradle
@@ -49,7 +49,7 @@ task emberLintHbs(type: YarnTask, dependsOn: emberLintJs) {
 }
 
 task emberServe(type: YarnTask, dependsOn: emberLintHbs) {
-  args = ['workspace', yarnMainProject, 'run', 'start',  '--proxy', 'localhost:9001', '--secure-proxy=false']
+  args = ['workspace', yarnMainProject, 'run', 'start',  '--proxy', 'http://localhost:9001', '--secure-proxy=false']
 }
 
 task emberWorkspaceTest(type: YarnTask, dependsOn: emberLintHbs) {
