Issue #1590: Gradle build fails when run in parallel - add dependency… (#1591)
* Issue #1590: Gradle build fails when run in parallel - add dependency on avro schema generation to metadata models jar generation

* Issue #1590: Adding processResource dependencies

* Issue #1590: Remove unnecessary gradle tasks

Co-authored-by: Ryan Holstien <rholstien@expediagroup.com>

--- a/metadata-events/mxe-utils-avro-1.7/build.gradle
+++ b/metadata-events/mxe-utils-avro-1.7/build.gradle
@@ -27,6 +27,7 @@ task copyOriginalMXESchemas(type: Copy) {
 }
 
 compileJava.dependsOn copyOriginalMXESchemas
+processResources.dependsOn copyOriginalMXESchemas
 
 clean {
   project.delete("src/main/resources/avro")
