--- a/metadata-models/build.gradle
+++ b/metadata-models/build.gradle
@@ -9,4 +9,6 @@ dependencies {
   testCompile externalDependency.guava
 }
 
+mainAvroSchemaJar.dependsOn generateAvroSchema
+
 pegasus.main.generationModes = [PegasusGenerationMode.PEGASUS, PegasusGenerationMode.AVRO]
