--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     container_name: mysql
     hostname: mysql
-    image: mysql:latest
+    image: mysql:5.7
     restart: always
     environment:
       MYSQL_DATABASE: 'datahub'
