build(quickstart): Small fix in quickstart.sh & doc update
1. Use "source" while executing quickstart.sh to bring env var to the context of calling shell
2. Use sudo while running chown in quickstart.sh
3. Update main readme
4. Add missing container names

--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -49,6 +49,7 @@ services:
   kafka-rest-proxy:
     image: confluentinc/cp-kafka-rest:5.4.0
     hostname: kafka-rest-proxy
+    container_name: kafka-rest-proxy
     ports:
       - "8082:8082"
     environment:
@@ -64,6 +65,7 @@ services:
   kafka-topics-ui:
     image: landoop/kafka-topics-ui:0.9.4
     hostname: kafka-topics-ui
+    container_name: kafka-topics-ui
     ports:
       - "18000:8000"
     environment:
