--- a/gms/impl/build.gradle
+++ b/gms/impl/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
   testCompile externalDependency.parseqTest
   testCompile externalDependency.mockito
+  testCompile externalDependency.testng
 }
 
 // Generate IDLs
