--- a/metadata-ingestion/mce-cli/requirements.txt
+++ b/metadata-ingestion/mce-cli/requirements.txt
@@ -1,2 +1,3 @@
-confluent-kafka==1.1.0
-avro-python3==1.8.2
+avro-python3==1.8.2; python_version == '3.7
+confluent-kafka==1.1.0; python_version == '3.7'
+confluent-kafka[avro]==1.1.0; python_version < '3.7'
