--- a/metadata-testing/metadata-test-models/build.gradle
+++ b/metadata-testing/metadata-test-models/build.gradle
@@ -6,3 +6,5 @@ dependencies {
 
   compile spec.product.pegasus.restliCommon
 }
+
+sourceSets.mainGeneratedDataTemplate.java.srcDirs('src/main/java/com/linkedin/testing/urn')
