refactor(gms): move gms restli resources (#1619)
Move dataset and identity resources and subresources to gms/impl/src/main/java/com/linkedin/metadata/resources
Update docs to reflect the change

--- a/gms/impl/build.gradle
+++ b/gms/impl/build.gradle
@@ -24,8 +24,8 @@ dependencies {
 
 // Generate IDLs
 pegasus.main.idlOptions.addIdlItem([
-    'com.linkedin.dataset.rest',
-    'com.linkedin.identity.rest'
+    'com.linkedin.metadata.resources.dataset',
+    'com.linkedin.metadata.resources.identity'
 ])
 
 ext.apiProject = project(':gms:api')
