build: pegasus plugin doesn't work well with gradle caching (#1622)
Snapshot & IDL will not be regenerated consistently when gradle caching is enabled.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
-org.gradle.caching=true
+org.gradle.caching=false
