--- a/gms/war/build.gradle
+++ b/gms/war/build.gradle
@@ -20,7 +20,7 @@ dependencies {
   jetty8 "org.eclipse.jetty:jetty-runner:9.4.18.v20190429"
 }
 
-task JettyRunWar(type: JavaExec) {
+task run(type: JavaExec, dependsOn: build) {
   main = "org.eclipse.jetty.runner.Runner"
   args = [war.archivePath]
   classpath configurations.jetty8
