fix(gms): unable to find registered resources (#1625)
Fix the unable to find registered resource error introduced by 6a309332f321fc6847a721629c276e62867bf52c
Also simplify the build script

--- a/gms/impl/build.gradle
+++ b/gms/impl/build.gradle
@@ -24,8 +24,7 @@ dependencies {
 
 // Generate IDLs
 pegasus.main.idlOptions.addIdlItem([
-    'com.linkedin.metadata.resources.dataset',
-    'com.linkedin.metadata.resources.identity'
+    'com.linkedin.metadata.resources',
 ])
 
 ext.apiProject = project(':gms:api')
