fix: Reduce gms & frontend docker image sizes (#1630)
* fix: Reduce gms docker image size to 254MB from 1.15GB
* fix: Reduce frontend docker image size to 294MB from 2.68GB

--- a/contrib/kubernetes/yaml/datahub-gms-deployment.yaml
+++ b/contrib/kubernetes/yaml/datahub-gms-deployment.yaml
@@ -19,7 +19,7 @@ spec:
           image: keremsahin/datahub-gms:latest
           ports:
           - containerPort: 8080
-          command: ["/bin/bash", "-c" ,"java -jar jetty-runner-9.4.20.v20190813.jar gms.war"]
+          command: ["/bin/sh", "-c" ,"java -jar jetty-runner-9.4.20.v20190813.jar gms.war"]
           env:
             - name: EBEAN_DATASOURCE_USERNAME
               valueFrom:
