--- a/docker/quickstart/docker-compose.yml
+++ b/docker/quickstart/docker-compose.yml
@@ -199,7 +199,7 @@ services:
       - mysql
       - schema-registry
       - neo4j
-    command: "bash -c 'dockerize -wait tcp://mysql:3306 -wait tcp://broker:29092 -wait http://elasticsearch:9200 \
+    command: "sh -c 'dockerize -wait tcp://mysql:3306 -wait tcp://broker:29092 -wait http://elasticsearch:9200 \
                                    -timeout 240s \
                                    java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
