--- a/docker/gms/docker-compose.yml
+++ b/docker/gms/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - NEO4J_URI=bolt://neo4j
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=datahub
-    command: "bash -c 'java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
+    command: "sh -c 'java -jar jetty-runner-9.4.20.v20190813.jar gms.war'"
 
 networks:
   default:
