--- a/contrib/kubernetes/yaml/datahub-mce-consumer-deployment.yaml
+++ b/contrib/kubernetes/yaml/datahub-mce-consumer-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: datahub-mce-consumer
           image: keremsahin/datahub-mce-consumer:latest
-          command: ["/bin/bash", "-c" ,"./mce-consumer-job/bin/mce-consumer-job"]
+          command: ["/bin/sh", "-c" ,"./mce-consumer-job/bin/mce-consumer-job"]
           env:
             - name: KAFKA_BOOTSTRAP_SERVER
               valueFrom:
