--- a/docker/mce-consumer/docker-compose.yml
+++ b/docker/mce-consumer/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - GMS_HOST=datahub-gms
       - GMS_PORT=8080
-    command: "bash -c './mce-consumer-job/bin/mce-consumer-job'"
+    command: "sh -c './mce-consumer-job/bin/mce-consumer-job'"
 
 networks:
   default:
