--- a/docker/mce-consumer/Dockerfile
+++ b/docker/mce-consumer/Dockerfile
@@ -4,9 +4,13 @@ MAINTAINER Kerem Sahin ksahin@linkedin.com
 
 COPY . datahub-src
 RUN cd datahub-src && ./gradlew :metadata-jobs:mce-consumer-job:build \
-    && cp metadata-jobs/mce-consumer-job/build/distributions/mce-consumer-job.zip ../mce-consumer-job.zip \
-    && cd .. && rm -rf datahub-src && unzip mce-consumer-job.zip
+    && cp metadata-jobs/mce-consumer-job/build/libs/mce-consumer-job.jar ../mce-consumer-job.jar \
+    && cd .. && rm -rf datahub-src
 
 FROM openjdk:8-jre-alpine
 
-COPY --from=builder /mce-consumer-job /mce-consumer-job/
+COPY --from=builder /mce-consumer-job.jar /mce-consumer-job.jar
+
+EXPOSE 9090
+
+ENTRYPOINT ["java", "-jar", "mce-consumer-job.jar"]
