--- a/docker/mce-consumer/docker-compose.yml
+++ b/docker/mce-consumer/docker-compose.yml
@@ -5,12 +5,15 @@ services:
     image: keremsahin/datahub-mce-consumer:latest
     hostname: datahub-mce-consumer
     container_name: datahub-mce-consumer
+    ports:
+        - "9090:9090"
     environment:
       - KAFKA_BOOTSTRAP_SERVER=broker:29092
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:8081
       - GMS_HOST=datahub-gms
       - GMS_PORT=8080
-    command: "sh -c './mce-consumer-job/bin/mce-consumer-job'"
+      - KAFKA_MCE_TOPIC_NAME=MetadataChangeEvent
+      - KAFKA_FMCE_TOPIC_NAME=FailedMetadataChangeEvent
 
 networks:
   default:
